--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,7 @@
-<h1>Sample App</h1>
-<a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
+<% provide(:title, 'Home') %>
+<h1>Home</h1>
+<p>
+  This is the home page for the
+  <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
+  sample application.
+</p>
