finish user signup

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,6 @@
 <footer class="footer">
   <small>
-    <a href="http://railstutorial.org/">Test app</a>
-    by me
+    <a href="http://railstutorial.org/">Test app by me</a>
   </small>
   <nav>
     <ul>
